--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -83,13 +83,8 @@
 
 			<!-- EDUCATION SECTION START -->
 			
-
-				<% if !is_param_array_empty(params[:schools]) %>
-
-					<h3 class="education"><span class="CapitalizeLetter">E</span>DUCATION</h3>
-
 					<% (1..num_of_forms('schools')).each do |i| %>
-						<% if !is_param_array_empty(params[:degree_abbreviations]) %>
+						<% if !params[:degree_abbreviations][i - 1].blank? %>
 							<% if is_featured(params[:degree_abbreviations_featured], params[:degree_abbreviations][i - 1]) %>
 								
 								<p class="educationText"><span class="abrvEducation"><%= params[:degree_abbreviations][i - 1] %></span>, <%= get_education_section(params[:degree_name][i - 1], params[:schools][i - 1], params[:city_education][i - 1], params[:state_education][i - 1]) %><p class="educationYear"><%= params[:year_graduation][i - 1] %></p>
@@ -102,6 +97,28 @@
 
 						<% end %>
 					
+					<% end %>
+				<% if !is_param_array_empty(params[:schools]) %>
+
+					<h3 class="education"><span class="CapitalizeLetter">E</span>DUCATION</h3>
+
+					<% (1..num_of_forms('schools')).each do |i| %>
+					
+						<% if !params[:degree_abbreviations][i - 1].blank? %>
+							<% if is_featured(params[:degree_abbreviations_featured], params[:degree_abbreviations][i - 1]) %>
+								
+								<p class="educationText"><span class="abrvEducation"><%= params[:degree_abbreviations][i - 1] %></span>, <%= get_education_section(params[:degree_name][i - 1], params[:schools][i - 1], params[:city_education][i - 1], params[:state_education][i - 1]) %><p class="educationYear"><%= params[:year_graduation][i - 1] %></p>
+						
+							<% else %>
+
+								<p class="educationText"><%= params[:degree_abbreviations][i - 1] %>, <%= get_education_section(params[:degree_name][i - 1], params[:schools][i - 1], params[:city_education][i - 1], params[:state_education][i - 1]) %><p class="educationYear"><%= params[:year_graduation][i - 1] %></p>
+
+						<% end %>		
+
+						<% end %>
+
+					
+
 					<% end %>
 
 				<% end %>
