Enable error messages on Heroku

--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -95,7 +95,7 @@
 						
 							<% else %>
 
-								<% if <%= params[:degree_abbreviations][i - 1].blank? %>
+								<% if params[:degree_abbreviations][i - 1].blank? %>
 									
 									<p class="educationText"><%= get_education_section(params[:degree_name][i - 1], params[:schools][i - 1], params[:city_education][i - 1], params[:state_education][i - 1]) %><p class="educationYear"><%= params[:year_graduation][i - 1] %></p>
 								
