--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -160,7 +160,7 @@
 
 				<% if !is_param_array_empty(params[:other_contents]) %>
 
-					<h3 class="otherSection"><span class="CapitalizeLetter">O</span>THER</h3>
+					<h3 class="otherSection"><span class="CapitalizeLetter"><%= get_first_letter(params[:other_title]) %></span><%= get_rest_of_title(params[:other_title]) %></h3>
 
 						<p class="otherSectionText"><%= params[:other_contents][i - 1] %></p>
 
@@ -177,7 +177,7 @@
 			
 				<% if !is_param_array_empty(params[:other_2_contents]) %>
 
-					<h3 class="otherSection2"><span class="CapitalizeLetter">O</span>THER 2</h3>
+					<h3 class="otherSection2"><span class="CapitalizeLetter"><%= get_first_letter(params[:other_2_title]) %></span><%= get_rest_of_title(params[:other_2_title]) %></h3>
 
 						<ul class="accomplishmentList">
 						<% bullet_point_items(params[:other_2_contents][i - 1]).each do |item| %>
