Add custom other & other 2 titles

--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -128,7 +128,7 @@
 						
 						<% else %>
 
-							<p class="certsAndLicensureText"><%= params[:cert_or_license_abbreviations][i - 1] %>, <%= get_cert_and_license_section(params[:cert_or_license_abbreviations][i - 1], params[:cert_or_license][i - 1]) %></p>
+							<p class="certsAndLicensureText"><%= get_cert_and_license_section(params[:cert_or_license_abbreviations][i - 1], params[:cert_or_license][i - 1]) %></p>
 					
 						<% end %>
 					
