Move logo to right and justify other description work text

--- a/public/my_css.css
+++ b/public/my_css.css
@@ -113,6 +113,10 @@ p.jobDescription {
 	text-align: justify;
 }
 
+p.secondjobDescription {
+	text-align: justify;
+}
+
 div.JDescription {
 	margin-bottom: -15pt;
 }
