--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -181,7 +181,7 @@
 
 						<ul class="accomplishmentList">
 						<% bullet_point_items(params[:other_2_contents][i - 1]).each do |item| %>
-							<li class="firstAccomplishment"><%= item %></li>
+							<li class="other2list"><%= item %></li>
 						<% end %>
 						</ul>
 				
