--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -20,7 +20,7 @@
 
             <div class="form-group"></div>
             
-            <p class="helpText">Contact information text</p>
+            <p class="helpText">Enter your candidate’s basic contact information, as it should appear on the top of the resume.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" 
@@ -32,7 +32,7 @@
             
             <div class="form-group"></div>
 
-            <p class="helpText">Description help text</p>
+            <p class="helpText">This is the “candidate blurb” at the top of the resume.<br>”Description Title” is the quick title that makes your candidate pop, and “Description” is the actual blurb itself.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" 
@@ -48,7 +48,7 @@
             
             <div class="form-group"></div>
             
-            <p class="helpText">Work experience help text</p>
+            <p class="helpText">To add additional work experience, click the + button at the bottom of the section. If there are multiple positions at the same company, just be certain to spell the company name identically and those jobs will be correctly formatted underneath the same company heading.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" 
@@ -64,7 +64,7 @@
             
             <div class="form-group"></div>
 
-            <p class="helpText">Education help text</p>
+            <p class="helpText">As with the Work Experience section, to add more degrees, click the + button at the bottom of the section. To feature a degree in the resume header, after the Candidate’s name, check the Featured box.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" 
@@ -80,7 +80,7 @@
 
             <div class="form-group"></div>
 
-            <p class="helpText">Certification and licensure help text</p>
+            <p class="helpText">As with the Education section, to add more certifications or licenses, click the + button at the bottom of the section. To feature a certification or license in the resume header, after the Candidate’s name, check the Featured box.<br>RN licenses should always be listed first; CIC/CPHQ licenses should always be listed last. Other degrees should be listed greatest to least.</p>
 
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" 
@@ -96,7 +96,7 @@
 
             <div class="form-group"></div>
 
-            <p class="helpText">Memberships and professional affiliations help text</p>
+            <p class="helpText">Always list an organization’s abbreviation. Leave “Position” blank, unless the candidate held a position within the company, i.e., Officer. Format as “Officer, YYYY” or “Officer, YYYY - YYYY.”</p>
 
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" 
@@ -112,7 +112,7 @@
             
             <div class="form-group"></div>
 
-            <p class="helpText">Other help text</p>
+            <p class="helpText">This is a catch-all field for potential content that does not fit into the other sections of the resume. The section title will need to be typed in ALL CAPS in order for the formatting to be correctly done. If you need bullet points in your field, use section Other 2.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" 
@@ -128,7 +128,7 @@
             
             <div class="form-group"></div>
 
-            <p class="helpText">Other 2 help text</p>
+            <p class="helpText">This is a catch-all field for potential content that does not fit into the other sections of the resume. The section title will need to be typed in ALL CAPS in order for the formatting to be correctly done. If you need bullet points in your field, use section Other.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" 
