--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -56,6 +56,10 @@ h4.panel-title > a:visited {
 	text-align: justify;
 }
 
+p.helpText {
+	text-align: justify;
+}
+
 .hidden {
      display:none;
 }
