--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -43,8 +43,10 @@
 								<ul class="accomplishmentList">
 								<% bullet_point_items(params[:accomplishments][i - 1]).each do |item| %>
 									<li class="firstAccomplishment"><%= item %></li>
+								<% end %>
+							<% else %>
+								<div class="noAccomplishments"></div>
 							<% end %>
-						<% end %>
 						</ul>
 
 					<% elsif is_company_unique(params[:company_names][i - 1], params[:company_names]) %>
@@ -58,6 +60,8 @@
 								<ul class="accomplishmentList">
 								<% bullet_point_items(params[:accomplishments][i - 1]).each do |item| %>
 									<li class="firstAccomplishment"><%= item %></li>
+							<% else %>
+								<div class="noAccomplishments"></div>
 							<% end %>
 						<% end %>
 						</ul>
