--- a/public/resume_copy.html.erb
+++ b/public/resume_copy.html.erb
@@ -46,7 +46,7 @@
 								<% end %>
 								</ul>
 							<% else %>
-								<div class="noAccomplishments"></div>
+								<div class="sameCompanyNoAccomplishments"></div>
 							<% end %>
 
 					<% elsif is_company_unique(params[:company_names][i - 1], params[:company_names]) %>
