Improve help text on form page

--- a/app/views/resumes/_contact_information.html.erb
+++ b/app/views/resumes/_contact_information.html.erb
@@ -33,5 +33,5 @@
 	    <%= text_field_tag :phone_number_3, nil, :maxlength => 4, :size => 4, class: "form-control" %>
 	  </div>
   </div>
-	  <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Next</a>
+	  <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" onclick="expandNext('#collapseOne', '#collapseTwo', '#descriptionHelpText');">Next</a>
 </div>
