--- a/app/views/resumes/_other.html.erb
+++ b/app/views/resumes/_other.html.erb
@@ -1,13 +1,14 @@
 <div class="other">
-	<div class="form-group"></div>
+  <div class="form-group"></div>
   <div class="form-group">
     <label for="otherTitle1">Other Title</label>
     <%= text_field_tag :other_title, nil, class: "form-control", placeholder: "Title for this Section"  %>
   </div>
   <div class="form-group">
-	  <label for="organization">Content</label>
-	  <%= text_area_tag 'other_contents[]', nil, placeholder: '', class: "form-control", rows: 5 %>
+    <label for="organization">Content</label>
+    <%= text_area_tag 'other_contents[]', nil, placeholder: '', class: "form-control", rows: 5 %>
   </div>
-	<div class="form-group"></div>
-	<a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseTwo">Next</a>
+  <div class="form-group"></div>
+  <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseFour" onclick="expandNext('#collapseSeven', '#collapseSix', '#mshipsAndProfessionalAffiliations');">Back</a>
+  <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseTwo" onclick="expandNext('#collapseSeven', '#collapseEight', '#other2Text');">Next</a>
 </div>
