--- a/app/views/resumes/_other_2.html.erb
+++ b/app/views/resumes/_other_2.html.erb
@@ -8,4 +8,6 @@
 	  <label for="organization">Content</label>
 	  <%= text_area_tag 'other_2_contents[]', nil, placeholder: 'Hitting enter in this section will create bullet points in your final resume.', class: "form-control", rows: 5 %>
   </div>
+	<div class="form-group"></div>
+  <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseFour" onclick="expandNext('#collapseEight', '#collapseSeven', '#otherText');">Back</a>
 </div>
