Finished help text interactivity when creating resume

--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -10,7 +10,7 @@
       <div class="panel panel-default helpText">
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" aria-expanded="true">
+            <a data-toggle="collapse" data-parent="#accordion" aria-expanded="true" id="helpHeading">
               Contact Information
             </a>
           </h4>
