Finished help text interactivity when creating resume

--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -128,7 +128,7 @@
             
             <div class="form-group"></div>
 
-            <p class="helpText">This is a catch-all field for potential content that does not fit into the other sections of the resume. The section title will need to be typed in ALL CAPS in order for the formatting to be correctly done. If you need bullet points in your field, use section Other.</p>
+            <p class="helpText">This is a catch-all field for potential content that does not fit into the other sections of the resume. The section title will need to be typed in ALL CAPS in order for the formatting to be correctly done.</p>
             
             <div class="form-group"></div>
             <a class="collapsed btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" 
