--- a/public/my_css.css
+++ b/public/my_css.css
@@ -143,6 +143,8 @@ span.secondJobTitleDate {
 	margin-top: -7pt;
 	margin-bottom: 2pt;
 	font-size: 10pt;
+	position: relative;
+	left: 10pt;
 }
 
 p.secondjobDescription {
